CSE420/Lab/Lab4-Intermediate Code Generation/22299480_222101811/y.output
Nonterminals useless in grammar

   factor_info


Terminals unused in grammar

   DO
   BREAK
   DOUBLE
   SWITCH
   CASE
   DEFAULT
   CONTINUE


Rules useless in grammar

   69 factor_info: factor


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: variable_decl
    5     | func_definition
    6     | error

    7 func_definition: type_specifier id_name LPAREN param_list RPAREN enter_func compound_statement
    8                | type_specifier id_name LPAREN RPAREN enter_func compound_statement

    9 enter_func: /* empty */

   10 param_list: param_list COMMA type_specifier ID
   11           | param_list COMMA type_specifier
   12           | type_specifier ID
   13           | type_specifier

   14 compound_statement: LCURL enter_scope_variables statements RCURL
   15                   | LCURL enter_scope_variables RCURL

   16 enter_scope_variables: /* empty */

   17 variable_decl: type_specifier declaration_list SEMICOLON

   18 type_specifier: INT
   19               | FLOAT
   20               | VOID
   21               | CHAR

   22 declaration_list: declaration_list COMMA id_name
   23                 | declaration_list COMMA id_name LTHIRD CONST_INT RTHIRD
   24                 | id_name
   25                 | id_name LTHIRD CONST_INT RTHIRD

   26 id_name: ID

   27 statements: statement
   28           | statements statement
   29           | error
   30           | statements error

   31 statement: variable_decl
   32          | func_definition
   33          | expression_statement
   34          | compound_statement
   35          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   36          | IF LPAREN expression RPAREN statement
   37          | IF LPAREN expression RPAREN statement ELSE statement
   38          | WHILE LPAREN expression RPAREN statement
   39          | PRINTLN LPAREN id_name RPAREN SEMICOLON
   40          | RETURN expression SEMICOLON

   41 expression_statement: SEMICOLON
   42                     | expression SEMICOLON

   43 variable: id_name
   44         | id_name LTHIRD expression RTHIRD

   45 expression: logic_expression
   46           | variable ASSIGNOP logic_expression

   47 logic_expression: rel_expression
   48                 | rel_expression LOGICOP rel_expression

   49 rel_expression: simple_expression
   50               | simple_expression RELOP simple_expression

   51 simple_expression: term
   52                  | simple_expression ADDOP term

   53 term: unary_expression
   54     | term MULOP unary_expression

   55 unary_expression: ADDOP unary_expression
   56                 | NOT unary_expression
   57                 | factor

   58 factor: variable
   59       | id_name LPAREN argument_list RPAREN
   60       | LPAREN expression RPAREN
   61       | CONST_INT
   62       | CONST_FLOAT
   63       | variable INCOP
   64       | variable DECOP

   65 argument_list: arguments
   66              | /* empty */

   67 arguments: arguments COMMA logic_expression
   68          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256) 6 29 30
IF (258) 36 37
ELSE (259) 37
CHAR (260) 21
FOR (261) 35
WHILE (262) 38
DO (263)
BREAK (264)
INT (265) 18
FLOAT (266) 19
DOUBLE (267)
VOID (268) 20
RETURN (269) 40
SWITCH (270)
CASE (271)
DEFAULT (272)
CONTINUE (273)
PRINTLN (274) 39
ADDOP (275) 52 55
MULOP (276) 54
INCOP (277) 63
DECOP (278) 64
RELOP (279) 50
ASSIGNOP (280) 46
LOGICOP (281) 48
NOT (282) 56
LPAREN (283) 7 8 35 36 37 38 39 59 60
RPAREN (284) 7 8 35 36 37 38 39 59 60
LCURL (285) 14 15
RCURL (286) 14 15
LTHIRD (287) 23 25 44
RTHIRD (288) 23 25 44
COMMA (289) 10 11 22 23 67
SEMICOLON (290) 17 39 40 41 42
CONST_INT (291) 23 25 61
CONST_FLOAT (292) 62
ID (293) 10 12 26
LOWER_THAN_ELSE (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
start (41)
    on left: 1, on right: 0
program (42)
    on left: 2 3, on right: 1 2
unit (43)
    on left: 4 5 6, on right: 2 3
func_definition (44)
    on left: 7 8, on right: 5 32
enter_func (45)
    on left: 9, on right: 7 8
param_list (46)
    on left: 10 11 12 13, on right: 7 10 11
compound_statement (47)
    on left: 14 15, on right: 7 8 34
enter_scope_variables (48)
    on left: 16, on right: 14 15
variable_decl (49)
    on left: 17, on right: 4 31
type_specifier (50)
    on left: 18 19 20 21, on right: 7 8 10 11 12 13 17
declaration_list (51)
    on left: 22 23 24 25, on right: 17 22 23
id_name (52)
    on left: 26, on right: 7 8 22 23 24 25 39 43 44 59
statements (53)
    on left: 27 28 29 30, on right: 14 28 30
statement (54)
    on left: 31 32 33 34 35 36 37 38 39 40, on right: 27 28 35 36 37
    38
expression_statement (55)
    on left: 41 42, on right: 33 35
variable (56)
    on left: 43 44, on right: 46 58 63 64
expression (57)
    on left: 45 46, on right: 35 36 37 38 40 42 44 60
logic_expression (58)
    on left: 47 48, on right: 45 46 67 68
rel_expression (59)
    on left: 49 50, on right: 47 48
simple_expression (60)
    on left: 51 52, on right: 49 50 52
term (61)
    on left: 53 54, on right: 51 52 54
unary_expression (62)
    on left: 55 56 57, on right: 53 54 55 56
factor (63)
    on left: 58 59 60 61 62 63 64, on right: 57
argument_list (64)
    on left: 65 66, on right: 59
arguments (65)
    on left: 67 68, on right: 65 67


State 0

    0 $accept: . start $end

    error  shift, and go to state 1
    CHAR   shift, and go to state 2
    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4
    VOID   shift, and go to state 5

    start            go to state 6
    program          go to state 7
    unit             go to state 8
    func_definition  go to state 9
    variable_decl    go to state 10
    type_specifier   go to state 11


State 1

    6 unit: error .

    $default  reduce using rule 6 (unit)


State 2

   21 type_specifier: CHAR .

    $default  reduce using rule 21 (type_specifier)


State 3

   18 type_specifier: INT .

    $default  reduce using rule 18 (type_specifier)


State 4

   19 type_specifier: FLOAT .

    $default  reduce using rule 19 (type_specifier)


State 5

   20 type_specifier: VOID .

    $default  reduce using rule 20 (type_specifier)


State 6

    0 $accept: start . $end

    $end  shift, and go to state 12


State 7

    1 start: program .
    2 program: program . unit

    error  shift, and go to state 1
    CHAR   shift, and go to state 2
    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4
    VOID   shift, and go to state 5

    $end  reduce using rule 1 (start)

    unit             go to state 13
    func_definition  go to state 9
    variable_decl    go to state 10
    type_specifier   go to state 11


State 8

    3 program: unit .

    $default  reduce using rule 3 (program)


State 9

    5 unit: func_definition .

    $default  reduce using rule 5 (unit)


State 10

    4 unit: variable_decl .

    $default  reduce using rule 4 (unit)


State 11

    7 func_definition: type_specifier . id_name LPAREN param_list RPAREN enter_func compound_statement
    8                | type_specifier . id_name LPAREN RPAREN enter_func compound_statement
   17 variable_decl: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 14

    declaration_list  go to state 15
    id_name           go to state 16


State 12

    0 $accept: start $end .

    $default  accept


State 13

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 14

   26 id_name: ID .

    $default  reduce using rule 26 (id_name)


State 15

   17 variable_decl: type_specifier declaration_list . SEMICOLON
   22 declaration_list: declaration_list . COMMA id_name
   23                 | declaration_list . COMMA id_name LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 17
    SEMICOLON  shift, and go to state 18


State 16

    7 func_definition: type_specifier id_name . LPAREN param_list RPAREN enter_func compound_statement
    8                | type_specifier id_name . LPAREN RPAREN enter_func compound_statement
   24 declaration_list: id_name .
   25                 | id_name . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 19
    LTHIRD  shift, and go to state 20

    $default  reduce using rule 24 (declaration_list)


State 17

   22 declaration_list: declaration_list COMMA . id_name
   23                 | declaration_list COMMA . id_name LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 14

    id_name  go to state 21


State 18

   17 variable_decl: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 17 (variable_decl)


State 19

    7 func_definition: type_specifier id_name LPAREN . param_list RPAREN enter_func compound_statement
    8                | type_specifier id_name LPAREN . RPAREN enter_func compound_statement

    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    FLOAT   shift, and go to state 4
    VOID    shift, and go to state 5
    RPAREN  shift, and go to state 22

    param_list      go to state 23
    type_specifier  go to state 24


State 20

   25 declaration_list: id_name LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 25


State 21

   22 declaration_list: declaration_list COMMA id_name .
   23                 | declaration_list COMMA id_name . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 26

    $default  reduce using rule 22 (declaration_list)


State 22

    8 func_definition: type_specifier id_name LPAREN RPAREN . enter_func compound_statement

    $default  reduce using rule 9 (enter_func)

    enter_func  go to state 27


State 23

    7 func_definition: type_specifier id_name LPAREN param_list . RPAREN enter_func compound_statement
   10 param_list: param_list . COMMA type_specifier ID
   11           | param_list . COMMA type_specifier

    RPAREN  shift, and go to state 28
    COMMA   shift, and go to state 29


State 24

   12 param_list: type_specifier . ID
   13           | type_specifier .

    ID  shift, and go to state 30

    $default  reduce using rule 13 (param_list)


State 25

   25 declaration_list: id_name LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 31


State 26

   23 declaration_list: declaration_list COMMA id_name LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 32


State 27

    8 func_definition: type_specifier id_name LPAREN RPAREN enter_func . compound_statement

    LCURL  shift, and go to state 33

    compound_statement  go to state 34


State 28

    7 func_definition: type_specifier id_name LPAREN param_list RPAREN . enter_func compound_statement

    $default  reduce using rule 9 (enter_func)

    enter_func  go to state 35


State 29

   10 param_list: param_list COMMA . type_specifier ID
   11           | param_list COMMA . type_specifier

    CHAR   shift, and go to state 2
    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4
    VOID   shift, and go to state 5

    type_specifier  go to state 36


State 30

   12 param_list: type_specifier ID .

    $default  reduce using rule 12 (param_list)


State 31

   25 declaration_list: id_name LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 25 (declaration_list)


State 32

   23 declaration_list: declaration_list COMMA id_name LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 37


State 33

   14 compound_statement: LCURL . enter_scope_variables statements RCURL
   15                   | LCURL . enter_scope_variables RCURL

    $default  reduce using rule 16 (enter_scope_variables)

    enter_scope_variables  go to state 38


State 34

    8 func_definition: type_specifier id_name LPAREN RPAREN enter_func compound_statement .

    $default  reduce using rule 8 (func_definition)


State 35

    7 func_definition: type_specifier id_name LPAREN param_list RPAREN enter_func . compound_statement

    LCURL  shift, and go to state 33

    compound_statement  go to state 39


State 36

   10 param_list: param_list COMMA type_specifier . ID
   11           | param_list COMMA type_specifier .

    ID  shift, and go to state 40

    $default  reduce using rule 11 (param_list)


State 37

   23 declaration_list: declaration_list COMMA id_name LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 23 (declaration_list)


State 38

   14 compound_statement: LCURL enter_scope_variables . statements RCURL
   15                   | LCURL enter_scope_variables . RCURL

    error        shift, and go to state 41
    IF           shift, and go to state 42
    CHAR         shift, and go to state 2
    FOR          shift, and go to state 43
    WHILE        shift, and go to state 44
    INT          shift, and go to state 3
    FLOAT        shift, and go to state 4
    VOID         shift, and go to state 5
    RETURN       shift, and go to state 45
    PRINTLN      shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    LCURL        shift, and go to state 33
    RCURL        shift, and go to state 50
    SEMICOLON    shift, and go to state 51
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 14

    func_definition       go to state 54
    compound_statement    go to state 55
    variable_decl         go to state 56
    type_specifier        go to state 11
    id_name               go to state 57
    statements            go to state 58
    statement             go to state 59
    expression_statement  go to state 60
    variable              go to state 61
    expression            go to state 62
    logic_expression      go to state 63
    rel_expression        go to state 64
    simple_expression     go to state 65
    term                  go to state 66
    unary_expression      go to state 67
    factor                go to state 68


State 39

    7 func_definition: type_specifier id_name LPAREN param_list RPAREN enter_func compound_statement .

    $default  reduce using rule 7 (func_definition)


State 40

   10 param_list: param_list COMMA type_specifier ID .

    $default  reduce using rule 10 (param_list)


State 41

   29 statements: error .

    $default  reduce using rule 29 (statements)


State 42

   36 statement: IF . LPAREN expression RPAREN statement
   37          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 69


State 43

   35 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 70


State 44

   38 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 71


State 45

   40 statement: RETURN . expression SEMICOLON

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 14

    id_name            go to state 57
    variable           go to state 61
    expression         go to state 72
    logic_expression   go to state 63
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor             go to state 68


State 46

   39 statement: PRINTLN . LPAREN id_name RPAREN SEMICOLON

    LPAREN  shift, and go to state 73


State 47

   55 unary_expression: ADDOP . unary_expression

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 14

    id_name           go to state 57
    variable          go to state 74
    unary_expression  go to state 75
    factor            go to state 68


State 48

   56 unary_expression: NOT . unary_expression

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 14

    id_name           go to state 57
    variable          go to state 74
    unary_expression  go to state 76
    factor            go to state 68


State 49

   60 factor: LPAREN . expression RPAREN

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 14

    id_name            go to state 57
    variable           go to state 61
    expression         go to state 77
    logic_expression   go to state 63
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor             go to state 68


State 50

   15 compound_statement: LCURL enter_scope_variables RCURL .

    $default  reduce using rule 15 (compound_statement)


State 51

   41 expression_statement: SEMICOLON .

    $default  reduce using rule 41 (expression_statement)


State 52

   61 factor: CONST_INT .

    $default  reduce using rule 61 (factor)


State 53

   62 factor: CONST_FLOAT .

    $default  reduce using rule 62 (factor)


State 54

   32 statement: func_definition .

    $default  reduce using rule 32 (statement)


State 55

   34 statement: compound_statement .

    $default  reduce using rule 34 (statement)


State 56

   31 statement: variable_decl .

    $default  reduce using rule 31 (statement)


State 57

   43 variable: id_name .
   44         | id_name . LTHIRD expression RTHIRD
   59 factor: id_name . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 78
    LTHIRD  shift, and go to state 79

    $default  reduce using rule 43 (variable)


State 58

   14 compound_statement: LCURL enter_scope_variables statements . RCURL
   28 statements: statements . statement
   30           | statements . error

    error        shift, and go to state 80
    IF           shift, and go to state 42
    CHAR         shift, and go to state 2
    FOR          shift, and go to state 43
    WHILE        shift, and go to state 44
    INT          shift, and go to state 3
    FLOAT        shift, and go to state 4
    VOID         shift, and go to state 5
    RETURN       shift, and go to state 45
    PRINTLN      shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    LCURL        shift, and go to state 33
    RCURL        shift, and go to state 81
    SEMICOLON    shift, and go to state 51
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 14

    func_definition       go to state 54
    compound_statement    go to state 55
    variable_decl         go to state 56
    type_specifier        go to state 11
    id_name               go to state 57
    statement             go to state 82
    expression_statement  go to state 60
    variable              go to state 61
    expression            go to state 62
    logic_expression      go to state 63
    rel_expression        go to state 64
    simple_expression     go to state 65
    term                  go to state 66
    unary_expression      go to state 67
    factor                go to state 68


State 59

   27 statements: statement .

    $default  reduce using rule 27 (statements)


State 60

   33 statement: expression_statement .

    $default  reduce using rule 33 (statement)


State 61

   46 expression: variable . ASSIGNOP logic_expression
   58 factor: variable .
   63       | variable . INCOP
   64       | variable . DECOP

    INCOP     shift, and go to state 83
    DECOP     shift, and go to state 84
    ASSIGNOP  shift, and go to state 85

    $default  reduce using rule 58 (factor)


State 62

   42 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 86


State 63

   45 expression: logic_expression .

    $default  reduce using rule 45 (expression)


State 64

   47 logic_expression: rel_expression .
   48                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 87

    $default  reduce using rule 47 (logic_expression)


State 65

   49 rel_expression: simple_expression .
   50               | simple_expression . RELOP simple_expression
   52 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 88
    RELOP  shift, and go to state 89

    $default  reduce using rule 49 (rel_expression)


State 66

   51 simple_expression: term .
   54 term: term . MULOP unary_expression

    MULOP  shift, and go to state 90

    $default  reduce using rule 51 (simple_expression)


State 67

   53 term: unary_expression .

    $default  reduce using rule 53 (term)


State 68

   57 unary_expression: factor .

    $default  reduce using rule 57 (unary_expression)


State 69

   36 statement: IF LPAREN . expression RPAREN statement
   37          | IF LPAREN . expression RPAREN statement ELSE statement

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 14

    id_name            go to state 57
    variable           go to state 61
    expression         go to state 91
    logic_expression   go to state 63
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor             go to state 68


State 70

   35 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    SEMICOLON    shift, and go to state 51
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 14

    id_name               go to state 57
    expression_statement  go to state 92
    variable              go to state 61
    expression            go to state 62
    logic_expression      go to state 63
    rel_expression        go to state 64
    simple_expression     go to state 65
    term                  go to state 66
    unary_expression      go to state 67
    factor                go to state 68


State 71

   38 statement: WHILE LPAREN . expression RPAREN statement

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 14

    id_name            go to state 57
    variable           go to state 61
    expression         go to state 93
    logic_expression   go to state 63
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor             go to state 68


State 72

   40 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 94


State 73

   39 statement: PRINTLN LPAREN . id_name RPAREN SEMICOLON

    ID  shift, and go to state 14

    id_name  go to state 95


State 74

   58 factor: variable .
   63       | variable . INCOP
   64       | variable . DECOP

    INCOP  shift, and go to state 83
    DECOP  shift, and go to state 84

    $default  reduce using rule 58 (factor)


State 75

   55 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 55 (unary_expression)


State 76

   56 unary_expression: NOT unary_expression .

    $default  reduce using rule 56 (unary_expression)


State 77

   60 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 96


State 78

   59 factor: id_name LPAREN . argument_list RPAREN

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 14

    $default  reduce using rule 66 (argument_list)

    id_name            go to state 57
    variable           go to state 74
    logic_expression   go to state 97
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor             go to state 68
    argument_list      go to state 98
    arguments          go to state 99


State 79

   44 variable: id_name LTHIRD . expression RTHIRD

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 14

    id_name            go to state 57
    variable           go to state 61
    expression         go to state 100
    logic_expression   go to state 63
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor             go to state 68


State 80

   30 statements: statements error .

    $default  reduce using rule 30 (statements)


State 81

   14 compound_statement: LCURL enter_scope_variables statements RCURL .

    $default  reduce using rule 14 (compound_statement)


State 82

   28 statements: statements statement .

    $default  reduce using rule 28 (statements)


State 83

   63 factor: variable INCOP .

    $default  reduce using rule 63 (factor)


State 84

   64 factor: variable DECOP .

    $default  reduce using rule 64 (factor)


State 85

   46 expression: variable ASSIGNOP . logic_expression

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 14

    id_name            go to state 57
    variable           go to state 74
    logic_expression   go to state 101
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor             go to state 68


State 86

   42 expression_statement: expression SEMICOLON .

    $default  reduce using rule 42 (expression_statement)


State 87

   48 logic_expression: rel_expression LOGICOP . rel_expression

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 14

    id_name            go to state 57
    variable           go to state 74
    rel_expression     go to state 102
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor             go to state 68


State 88

   52 simple_expression: simple_expression ADDOP . term

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 14

    id_name           go to state 57
    variable          go to state 74
    term              go to state 103
    unary_expression  go to state 67
    factor            go to state 68


State 89

   50 rel_expression: simple_expression RELOP . simple_expression

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 14

    id_name            go to state 57
    variable           go to state 74
    simple_expression  go to state 104
    term               go to state 66
    unary_expression   go to state 67
    factor             go to state 68


State 90

   54 term: term MULOP . unary_expression

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 14

    id_name           go to state 57
    variable          go to state 74
    unary_expression  go to state 105
    factor            go to state 68


State 91

   36 statement: IF LPAREN expression . RPAREN statement
   37          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 106


State 92

   35 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    SEMICOLON    shift, and go to state 51
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 14

    id_name               go to state 57
    expression_statement  go to state 107
    variable              go to state 61
    expression            go to state 62
    logic_expression      go to state 63
    rel_expression        go to state 64
    simple_expression     go to state 65
    term                  go to state 66
    unary_expression      go to state 67
    factor                go to state 68


State 93

   38 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 108


State 94

   40 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 40 (statement)


State 95

   39 statement: PRINTLN LPAREN id_name . RPAREN SEMICOLON

    RPAREN  shift, and go to state 109


State 96

   60 factor: LPAREN expression RPAREN .

    $default  reduce using rule 60 (factor)


State 97

   68 arguments: logic_expression .

    $default  reduce using rule 68 (arguments)


State 98

   59 factor: id_name LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 110


State 99

   65 argument_list: arguments .
   67 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 111

    $default  reduce using rule 65 (argument_list)


State 100

   44 variable: id_name LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 112


State 101

   46 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 46 (expression)


State 102

   48 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 48 (logic_expression)


State 103

   52 simple_expression: simple_expression ADDOP term .
   54 term: term . MULOP unary_expression

    MULOP  shift, and go to state 90

    $default  reduce using rule 52 (simple_expression)


State 104

   50 rel_expression: simple_expression RELOP simple_expression .
   52 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 88

    $default  reduce using rule 50 (rel_expression)


State 105

   54 term: term MULOP unary_expression .

    $default  reduce using rule 54 (term)


State 106

   36 statement: IF LPAREN expression RPAREN . statement
   37          | IF LPAREN expression RPAREN . statement ELSE statement

    IF           shift, and go to state 42
    CHAR         shift, and go to state 2
    FOR          shift, and go to state 43
    WHILE        shift, and go to state 44
    INT          shift, and go to state 3
    FLOAT        shift, and go to state 4
    VOID         shift, and go to state 5
    RETURN       shift, and go to state 45
    PRINTLN      shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    LCURL        shift, and go to state 33
    SEMICOLON    shift, and go to state 51
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 14

    func_definition       go to state 54
    compound_statement    go to state 55
    variable_decl         go to state 56
    type_specifier        go to state 11
    id_name               go to state 57
    statement             go to state 113
    expression_statement  go to state 60
    variable              go to state 61
    expression            go to state 62
    logic_expression      go to state 63
    rel_expression        go to state 64
    simple_expression     go to state 65
    term                  go to state 66
    unary_expression      go to state 67
    factor                go to state 68


State 107

   35 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 14

    id_name            go to state 57
    variable           go to state 61
    expression         go to state 114
    logic_expression   go to state 63
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor             go to state 68


State 108

   38 statement: WHILE LPAREN expression RPAREN . statement

    IF           shift, and go to state 42
    CHAR         shift, and go to state 2
    FOR          shift, and go to state 43
    WHILE        shift, and go to state 44
    INT          shift, and go to state 3
    FLOAT        shift, and go to state 4
    VOID         shift, and go to state 5
    RETURN       shift, and go to state 45
    PRINTLN      shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    LCURL        shift, and go to state 33
    SEMICOLON    shift, and go to state 51
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 14

    func_definition       go to state 54
    compound_statement    go to state 55
    variable_decl         go to state 56
    type_specifier        go to state 11
    id_name               go to state 57
    statement             go to state 115
    expression_statement  go to state 60
    variable              go to state 61
    expression            go to state 62
    logic_expression      go to state 63
    rel_expression        go to state 64
    simple_expression     go to state 65
    term                  go to state 66
    unary_expression      go to state 67
    factor                go to state 68


State 109

   39 statement: PRINTLN LPAREN id_name RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 116


State 110

   59 factor: id_name LPAREN argument_list RPAREN .

    $default  reduce using rule 59 (factor)


State 111

   67 arguments: arguments COMMA . logic_expression

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 14

    id_name            go to state 57
    variable           go to state 74
    logic_expression   go to state 117
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor             go to state 68


State 112

   44 variable: id_name LTHIRD expression RTHIRD .

    $default  reduce using rule 44 (variable)


State 113

   36 statement: IF LPAREN expression RPAREN statement .
   37          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 118

    $default  reduce using rule 36 (statement)


State 114

   35 statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 119


State 115

   38 statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 38 (statement)


State 116

   39 statement: PRINTLN LPAREN id_name RPAREN SEMICOLON .

    $default  reduce using rule 39 (statement)


State 117

   67 arguments: arguments COMMA logic_expression .

    $default  reduce using rule 67 (arguments)


State 118

   37 statement: IF LPAREN expression RPAREN statement ELSE . statement

    IF           shift, and go to state 42
    CHAR         shift, and go to state 2
    FOR          shift, and go to state 43
    WHILE        shift, and go to state 44
    INT          shift, and go to state 3
    FLOAT        shift, and go to state 4
    VOID         shift, and go to state 5
    RETURN       shift, and go to state 45
    PRINTLN      shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    LCURL        shift, and go to state 33
    SEMICOLON    shift, and go to state 51
    CONST_INT    shift, and go to state 52
    CONST_FLOAT  shift, and go to state 53
    ID           shift, and go to state 14
